--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -49,7 +49,7 @@
 {% set currentPage = params.page %}
 {% set startNum = currentPage - ((maxPagesDisplay - 1) / 2) %}
 {% set endNum = currentPage + ((maxPagesDisplay - 1) / 2) %}
-{% set totalPages = (params.total / params.limit) | round(0, "ceil") %}
+{% set totalPages = (params.caseCount / params.limit) | round(0, "ceil") %}
 
 {% if startNum < 1 or totalPages <= maxPagesDisplay %}
     {% set startNum = 1 %}
@@ -169,7 +169,7 @@
 
     {% if tableData.rows | length %}
         {% block table %}
-            <span class="govuk-heading-m">{{ params.total }} case{{ 's' if params.total > 1 }} {% if params.subsection !== "" %} {% if params.subsection === "added" %}added to {% else %}removed from {% endif%} today's case list at {{ moment(params.lastUpdated).format('hh:mma') }}{% endif %}</span>
+            <span class="govuk-heading-m">{{ params.caseCount }} case{{ 's' if params.caseCount > 1 }} {% if params.subsection !== "" %} {% if params.subsection === "added" %}added to {% else %}removed from {% endif%} today's case list at {{ moment(params.lastUpdated).format('hh:mma') }}{% endif %}</span>
             {%- from "govuk/components/table/macro.njk" import govukTable -%}
             {{ govukTable(tableData) }}
         {% endblock %}
@@ -184,7 +184,7 @@
                 results: {
                     from: params.from + 1,
                     to: params.to,
-                    count: params.total
+                    count: params.caseCount
                 },
                 previous: previousLink,
                 next: nextLink,
