--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -38,29 +38,29 @@
             {{ offences.push('<li>' + offence.offenceTitle | escape + '</li>') }}
         {% endfor %}
         {{ offences.push('</ol>') }}
+    {% endif %}
 
     {% set listing = [] %}
-        {% if item.source === "COMMON_PLATFORM" %}
-            {{ listing.push('<ol class="govuk-list govuk-!-margin-bottom-0">') }}
-        {% for listNumberFromCP in item.offences %}
-            {{ listing.push('<li>' + listNumberFromCP.listNo | ordinalNumber + '<li>') }}
+    {% if item.source === "COMMON_PLATFORM" %}
+        {{ listing.push('<ol class="govuk-list govuk-!-margin-bottom-0">') }}
+        {% for listNOfromCP in item.offences %}
+            {{ listing.push('<li>' + listNOfromCP.listNo | ordinalNumber | escape + '</li>' ) }}
         {% endfor %}
-            {% else %}
-                {{ listing.push(item.listNo) }}
-        {% endif %}
-            {{ listing.push('</ol>') }}
+    {% else %}
+        {{ listing.push(item.listNo) }}
+        {{ listing.push('</ol>') }}
     {% endif %}
 
     {% set defendantFullName = (item.name.forename1 + ' ' + item.name.surname) if (item.name.forename1 and item.name.surname) else item.defendantName %}
     {% set a11yTitle = 'View case for defendant ' + defendantFullName | escape | apostropheInName | properCase | removeTitle %}
     {% set crnDisplay = '<div class="pac-secondary-text govuk-body-s govuk-!-margin-top-1">' + item.crn if item.crn else '' + '</div>' %}
     {%- set tableRow = [
-            { text: ('<a href="/' + params.courtCode + '/case/' + item.caseId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
-            { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + ('<span class="moj-badge moj-badge--black pac-badge">Psr</span>' | safe if item.awaitingPsr) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ (item.probationStatus | string | capitalize if not notMatched) + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate, 'YYYY-MM-DD').format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
-            { text: offences | join('') | safe },
-            { text: listing | join('') | safe },
-            { text: item.session | capitalize },
-            { text: courtRoom, format: "numeric"}
+        { text: ('<a href="/' + params.courtCode + '/case/' + item.caseId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
+        { text: ('<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + ('<span class="moj-badge moj-badge--black pac-badge">Psr</span>' | safe if item.awaitingPsr) + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ (item.probationStatus | string | capitalize if not notMatched) + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate, 'YYYY-MM-DD').format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
+        { text: offences | join('') | safe },
+        { text: listing  | join('') | safe },
+        { text: item.session | capitalize },
+        { text: courtRoom, format: "numeric"}
     ] -%}
     {%- if params.subsection === 'removed' %}
         {{ tableRow.push({ text: item.caseNo, format: "numeric" }) }}
