--- a/server/views/components/days-navigation/template.njk
+++ b/server/views/components/days-navigation/template.njk
@@ -28,7 +28,7 @@
                 {%- endif -%}
                 {%- set isCurrentDateOrSunday = isCurrentDate or isSunday -%}
 
-                <{{ "span" if isCurrentDateOrSunday else "a" }} class="splide__slide pac-days-navigation-item{{ " pac-days-navigation-item__link" if not isCurrentDateOrSunday }}{{ " calendar-nav-link-today" if params.enablePastCasesNavigation and isToday and not isCurrentDate }}{{ " calendar-nav-link__disabled" if isSunday }}"{% if not isCurrentDateOrSunday %} href="{{ params.baseUrl + '/' + thisDate.format('yyyy-MM-DD') }}"{% elseif isCurrentDate %} aria-current="date"{% endif %} aria-label="{{ thisDate.format('dddd D')}}" role="group" aria-roledescription="slide">
+                <{{ "span" if isCurrentDateOrSunday else "a" }} class="splide__slide pac-days-navigation-item{{ " pac-days-navigation-item__link" if not isCurrentDateOrSunday }}{{ " calendar-nav-link-today" if params.enablePastCasesNavigation and isToday and not isCurrentDate }}{{ " calendar-nav-link__disabled" if isSunday }}"{% if not isCurrentDateOrSunday %} href="{{ params.baseUrl + '/' + thisDate.format('yyyy-MM-DD') }}"{% elseif isCurrentDate %} aria-current="date"{% endif %} aria-label="View case list for {{ thisDate.format('ddd D')}}" role="group" aria-roledescription="slide">
 
                     <span>{{ thisDate.format('ddd') }}</span>
                     <span class="govuk-!-font-size-24 govuk-!-font-weight-bold">{{ thisDate.format('D') }}</span>
