--- a/server/views/outcomes/outcomes-paging-partial.njk
+++ b/server/views/outcomes/outcomes-paging-partial.njk
@@ -1,7 +1,15 @@
 {% if totalPages > 1 %}
+
+    {% set toElementCount = (params.currentPage * params.pageSize) if (params.currentPage * params.pageSize) <= totalElements else totalElements %}
+
     {% block pagination %}
-        {% from "govuk/components/pagination/macro.njk" import govukPagination %}
-        {{ govukPagination({
+        {%- from "moj/components/pagination/macro.njk" import mojPagination -%}
+        {{ mojPagination({
+            results: {
+                from: (params.currentPage - 1) * params.pageSize + 1,
+                to: toElementCount,
+                count: totalElements
+            },
             previous: pagination.previousLink,
             next: pagination.nextLink,
             items: pagination.pageItems
